--- a/Qube.Web.Core/Qube.Web.Core.csproj
+++ b/Qube.Web.Core/Qube.Web.Core.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core.cs" />
+    <Compile Include="WebResource.cs" />
     <Compile Include="Helpers\HtmlCustomControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
