--- a/Qube.Extensions/Qube.Extensions.csproj
+++ b/Qube.Extensions/Qube.Extensions.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{43B292DD-F957-4985-B0A8-594093AE15A1}</ProjectGuid>
+    <ProjectGuid>{E5FCAF31-082A-411E-8FEB-6C524AE60C88}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Qube.Web.Core</RootNamespace>
-    <AssemblyName>Qube.Web.Core</AssemblyName>
+    <RootNamespace>Qube.Extensions</RootNamespace>
+    <AssemblyName>Qube.Extensions</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -33,7 +33,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,9 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="QSManager.cs" />
-    <Compile Include="WebResource.cs" />
-    <Compile Include="Helpers\HtmlCustomControl.cs" />
+    <Compile Include="XML.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
