--- a/Qube.Drawing/Qube.Drawing.csproj
+++ b/Qube.Drawing/Qube.Drawing.csproj
@@ -1,16 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B7E23E44-3155-4958-98E3-A99250A4422C}</ProjectGuid>
+    <ProjectGuid>{1F5516B9-FFB1-4328-93A4-8BC0C6CE6A8F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Qube.Web.UI</RootNamespace>
-    <AssemblyName>Qube.Web.UI</AssemblyName>
+    <RootNamespace>Qube.Drawing</RootNamespace>
+    <AssemblyName>Qube.Drawing</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,7 +34,6 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,27 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Forms\QubeDropDownList.cs" />
-    <Compile Include="Forms\QubeCheckBox.cs" />
-    <Compile Include="Forms\QubeCustomValidator.cs" />
-    <Compile Include="Forms\QubeFileUpload.cs" />
-    <Compile Include="Stand-alone\Captcha.cs" />
-    <Compile Include="Forms\IQubeFormField.cs" />
-    <Compile Include="Stand-alone\MailTo.cs" />
+    <Compile Include="Imaging.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Forms\QubeCRUDForm.cs" />
-    <Compile Include="Stand-alone\QubeTag.cs" />
-    <Compile Include="Forms\QubeTextBox.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Qube.Globalization\Qube.Globalization.csproj">
-      <Project>{7bb9d0a3-33e3-4e7e-9ee3-0208c94425b2}</Project>
-      <Name>Qube.Globalization</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Qube.Web.Core\Qube.Web.Core.csproj">
-      <Project>{43b292dd-f957-4985-b0a8-594093ae15a1}</Project>
-      <Name>Qube.Web.Core</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
