--- a/Qube.WebServices/Qube.WebServices.csproj
+++ b/Qube.WebServices/Qube.WebServices.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="JSONPWebService.cs" />
+    <Compile Include="JSONWebClient.cs" />
     <Compile Include="JSONWebService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
