Improved JSON Client/Server classes, re-added date logic in QubeTextBox, added new Linq extensions class.

--- a/Qube.Extensions/Qube.Extensions.csproj
+++ b/Qube.Extensions/Qube.Extensions.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DateTime.cs" />
+    <Compile Include="Linq.cs" />
     <Compile Include="Reflection.cs" />
     <Compile Include="Serialization.cs" />
     <Compile Include="XML.cs" />
