--- a/Qube.Extensions/Qube.Extensions.csproj
+++ b/Qube.Extensions/Qube.Extensions.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DateTime.cs" />
+    <Compile Include="Dictionary.cs" />
     <Compile Include="Linq.cs" />
     <Compile Include="Reflection.cs" />
     <Compile Include="Serialization.cs" />
