New ToDataTable() method. QSManager can build a QueryString now. Fixed Actions.Retry() method (retryCount should be checked either if it's == 0 OR below). New String extensions class with ToStringSafe() methods.

--- a/Qube.Extensions/Qube.Extensions.csproj
+++ b/Qube.Extensions/Qube.Extensions.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Linq.cs" />
     <Compile Include="Reflection.cs" />
     <Compile Include="Serialization.cs" />
+    <Compile Include="String.cs" />
     <Compile Include="XML.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
