--- a/Qube.Web.UI/Qube.Web.UI.csproj
+++ b/Qube.Web.UI/Qube.Web.UI.csproj
@@ -48,6 +48,9 @@
     <Compile Include="Forms\QubeStandardForm.cs" />
     <Compile Include="Forms\QubeFormBase.cs" />
     <Compile Include="Forms\QubeContactForm.cs" />
+    <Compile Include="QubePage.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="Stand-alone\Captcha.cs" />
     <Compile Include="Forms\Components\IQubeFormField.cs" />
     <Compile Include="Stand-alone\MailTo.cs" />
