--- a/Qube.Web.UI/Qube.Web.UI.csproj
+++ b/Qube.Web.UI/Qube.Web.UI.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Stand-alone\MailTo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Forms\QubeCRUDForm.cs" />
+    <Compile Include="Stand-alone\QubeTableCenter.cs" />
     <Compile Include="Stand-alone\QubeTag.cs" />
     <Compile Include="Forms\Components\QubeTextBox.cs" />
   </ItemGroup>
