--- a/Qube.Web.Core/Qube.Web.Core.csproj
+++ b/Qube.Web.Core/Qube.Web.Core.csproj
@@ -43,6 +43,12 @@
   <ItemGroup>
     <Compile Include="Extensions.cs" />
     <Compile Include="QSManager.cs" />
+    <Compile Include="QubeMaster.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="QubePage.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="WebResource.cs" />
     <Compile Include="Helpers\HtmlCustomControl.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
