Trying to create a new DebugLine control to show stuff in a better visual way than simple Response.Write.

--- a/Qube.Web.UI/Qube.Web.UI.csproj
+++ b/Qube.Web.UI/Qube.Web.UI.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Forms\Components\QubeCustomValidator.cs" />
     <Compile Include="Forms\Components\QubeFileUpload.cs" />
     <Compile Include="Forms\Components\QubeOneToMany.cs" />
+    <Compile Include="Forms\QubeCRUDForm2.cs" />
     <Compile Include="Forms\QubeStandardForm.cs" />
     <Compile Include="Forms\QubeFormBase.cs" />
     <Compile Include="Forms\QubeContactForm.cs" />
