--- a/Qube.Web.Core/Qube.Web.Core.csproj
+++ b/Qube.Web.Core/Qube.Web.Core.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DebugLine.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="QSManager.cs" />
     <Compile Include="QubeMaster.cs">
